--- a/app/Rmd/report_planning_EN.Rmd
+++ b/app/Rmd/report_planning_EN.Rmd
@@ -17,8 +17,32 @@ Dataset description from the Open Data record [@OpenData_ebsa]: Ecologically and
 
 #### ***Area-specific EBSA search results***  
 
-**under-development**
+*
+```{r echo=FALSE, results='asis'}
+#function for overlap
+EBSA_overlap(EBSA_sf, studyArea)
+```
+
+```{r echo=FALSE, results='asis'}
+#function for report
+EBSA_report(EBSA_sf, studyArea)
+```
+
+```{r echo=FALSE, results='asis'}
+#function for report url
+EBSA_reporturl(EBSA_sf, studyArea)
+```
+
+```{r echo=FALSE, results='asis'}
+#function for location
+EBSA_location(EBSA_sf, studyArea)
+```
+
+```{r echo=FALSE, results='asis'}
+#function for bioregion
+EBSA_bioregion(EBSA_sf, studyArea)
+```
 
 ```{r, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none. Map showing Ecologically and Biologically Significant Areas (EBSA; pink) relative to the search area defined by the user: location of the proposed project/activity is highlighted in yellow (input polygon), surrounded by an exposure zone or user-defined buffer area in blue.'}
-#plot_EBSA(EBSA_sf, studyArea, land10m_sf, 300)
+plot_EBSA(EBSA_sf, studyArea, land10m_sf, 300, bounds_sf)
 ```
