--- a/app/data/mybiblio.bib
+++ b/app/data/mybiblio.bib
@@ -131,4 +131,167 @@ Data, and Methods},
   year = {2017}
 }
 
+@Manual{data.table,
+  title = {data.table: Extension of data.frame},
+  author = {Matt Dowle and Arun Srinivasan},
+  year = {2020},
+  note = {R package version 1.13.6},
+  url = {https://CRAN.R-project.org/package=data.table}
+}
+
+@Manual{dplyr,
+  title = {dplyr: A Grammar of Data Manipulation},
+  author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
+  year = {2020},
+  note = {R package version 1.0.2},
+  url = {https://CRAN.R-project.org/package=dplyr}
+}
+
+@Book{ggplot2,
+  author = {Hadley Wickham},
+  title = {ggplot2: Elegant Graphics for Data Analysis},
+  publisher = {Springer-Verlag New York},
+  year = {2016},
+  isbn = {978-3-319-24277-4},
+  url = {https://ggplot2.tidyverse.org}
+}
+
+@Manual{easypackages,
+  title = {easypackages: Easy Loading and Installing of Packages},
+  author = {Jake Sherman},
+  year = {2016},
+  note = {R package version 0.1.0},
+  url = {https://CRAN.R-project.org/package=easypackages}
+}
+
+@Manual{ggspatial,
+  title = {ggspatial: Spatial Data Framework for ggplot2},
+  author = {Dewey Dunnington},
+  year = {2021},
+  note = {R package version 1.1.5},
+  url = {https://CRAN.R-project.org/package=ggspatial}
+}
+
+@Manual{gridExtra,
+  title = {gridExtra: Miscellaneous Functions for "Grid" Graphics},
+  author = {Baptiste Auguie},
+  year = {2017},
+  note = {R package version 2.3},
+  url = {https://CRAN.R-project.org/package=gridExtra}
+}
+
+@Manual{kableExtra,
+  title = {kableExtra: Construct Complex Table with 'kable' and Pipe Syntax},
+  author = {Hao Zhu},
+  year = {2020},
+  note = {R package version 1.3.1},
+  url = {https://CRAN.R-project.org/package=kableExtra}
+}
+
+@Manual{knitr,
+  title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
+  author = {Yihui Xie},
+  year = {2020},
+  note = {R package version 1.30},
+  url = {https://yihui.org/knitr/}
+}
+
+@Article{lubridate,
+  title = {Dates and Times Made Easy with {lubridate}},
+  author = {Garrett Grolemund and Hadley Wickham},
+  journal = {Journal of Statistical Software},
+  year = {2011},
+  volume = {40},
+  number = {3},
+  pages = {1--25},
+  url = {https://www.jstatsoft.org/v40/i03/}
+}
+
+@Manual{maps,
+  title = {maps: Draw Geographical Maps},
+  author = {Original S code by Richard A. Becker and Allan R. Wilks. R version by Ray Brownrigg. Enhancements by Thomas P Minka and Alex Deckmyn.},
+  year = {2018},
+  note = {R package version 3.3.0},
+  url = {https://CRAN.R-project.org/package=maps}
+}
+
+@Manual{raster,
+  title = {raster: Geographic Data Analysis and Modeling},
+  author = {Robert J. Hijmans},
+  year = {2020},
+  note = {R package version 3.4-5},
+  url = {https://CRAN.R-project.org/package=raster}
+}
+
+@Manual{RCurl,
+  title = {RCurl: General Network (HTTP/FTP/...) Client Interface for R},
+  author = {Duncan {Temple Lang}},
+  year = {2020},
+  note = {R package version 1.98-1.2},
+  url = {https://CRAN.R-project.org/package=RCurl}
+}
+
+@Manual{rgdal,
+  title = {rgdal: Bindings for the 'Geospatial' Data Abstraction Library},
+  author = {Roger Bivand and Tim Keitt and Barry Rowlingson},
+  year = {2021},
+  note = {R package version 1.5-23},
+  url = {https://CRAN.R-project.org/package=rgdal}
+}
+
+@Article{sf,
+  author = {Edzer Pebesma},
+  title = {{Simple Features for R: Standardized Support for Spatial Vector Data}},
+  year = {2018},
+  journal = {{The R Journal}},
+  doi = {10.32614/RJ-2018-009},
+  url = {https://doi.org/10.32614/RJ-2018-009},
+  pages = {439--446},
+  volume = {10},
+  number = {1},
+}
+
+@Manual{stars,
+  title = {stars: Spatiotemporal Arrays, Raster and Vector Data Cubes},
+  author = {Edzer Pebesma},
+  year = {2020},
+  note = {R package version 0.4-3},
+  url = {https://CRAN.R-project.org/package=stars}
+}
+
+@Manual{stringr,
+  title = {stringr: Simple, Consistent Wrappers for Common String Operations},
+  author = {Hadley Wickham},
+  year = {2019},
+  note = {R package version 1.4.0},
+  url = {https://CRAN.R-project.org/package=stringr}
+}
+
+@Article{tidyverse,
+  title = {Welcome to the {tidyverse}},
+  author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
+  year = {2019},
+  journal = {Journal of Open Source Software},
+  volume = {4},
+  number = {43},
+  pages = {1686},
+  doi = {10.21105/joss.01686}
+}
+
+@Manual{Mardatawrangling,
+  title = {Mardatawrangling},
+  author = {McMahon Mike},
+  year = {2017},
+  note = {R package version 2021.02.05},
+  url = {https://github.com/Maritimes/Mar.datawrangling}
+}
+
+@Manual{standardPrintOutput,
+  title = {standardPrintOutput: Standard Graph and Table Utilities},
+  author = {N/A},
+  year = {2021},
+  note = {R package version 0.0.0.9000},
+  url = {https://rdrr.io/github/terminological/standard-print-output/}
+}
+
 
