--- a/app/Rmd/report_habitat_EN.Rmd
+++ b/app/Rmd/report_habitat_EN.Rmd
@@ -20,7 +20,19 @@ Data notes:
 
 #### ***Area-specific Intertidal Vegetation and Rockweed search results***  
 
-**under-development**
+```{r overlap rockweed, echo=FALSE, results='asis'}
+rockweed_intersect <- st_intersection(studyArea,st_make_valid(rockweed_sf))
+rockweed_result<-as.numeric(nrow(rockweed_intersect))
+```
+*
+```{r overlap rockweed output, echo=FALSE, results='asis'}
+ Query_output_rockweed<-if(rockweed_result < 1){"There are no relevant records of predicted intertidal vegetation for this search area."
+   } else {"There are relevant records of predicted intertidal vegetation for this search area."}
+ Query_output_rockweed<-noquote(Query_output_rockweed)
+ writeLines(Query_output_rockweed)
+```
 
 ```{r, fig.height=8, fig.width=11, fig.cap='Quality Tier: Medium. Security level: none. Map showing the search area defined by the user: location of the proposed project/activity is highlighted in yellow (input polygon), surrounded by an exposure zone or user-defined buffer area in blue. Figure shows overlap between the search area and satellite-based maps of intertidal vegetation and rockweed presence polygons.'}
+rockweed_plot<-plot_rockweed(rockweed_sf, studyArea, land50k_sf, 5, bounds_sf)
+if(rockweed_result > 1){print(rockweed_plot)} else {NULL}
 ```
