Edits on the cetacean tech report primarily done by Phil Greyson. CG included a few additions to directly call the packages with functions.

--- a/app/Rmd/intro_EN.Rmd
+++ b/app/Rmd/intro_EN.Rmd
@@ -71,7 +71,7 @@ site <- sf::st_centroid(studyArea)
 #```{r child = c('../Rmd/report_cetaceans_EN.Rmd', 'report_fish_EN.Rmd', #'report_habitat_EN.Rmd', 'report_planning_EN.Rmd', 'report_SARA_EN.Rmd')}
 #```
 
-```{r child = '../Rmd/report_habitat_EN.Rmd'}
+```{r child = '../Rmd/report_cetaceans_EN.Rmd'}
 ```
 
 <!-- END  -->
