--- a/app/data/mybiblio.bib
+++ b/app/data/mybiblio.bib
@@ -6,6 +6,14 @@ Data, and Methods},
   year = {2012}
 }
 
+@techreport{DFO2016_recoverynbw,
+  author = {DFO},
+  title = {Recovery Strategy for the Northern Bottlenose Whale ({\it Hyperoodan ampullatus}) Scotian Shelf population, in Atlantic Canadian Waters},
+  institution = {Species at Risk Act Recovery Strategy Series. Fisheries and Oceans Canada, Ottawa. vii + 70 pp},
+  year = {2016}
+}
+
+
 @techreport{DFO2020NBW_imphabitat,
   author = {DFO},
   title = {Assessment of the Distribution, Movements, and Habitat Use of Northern Bottlenose Whales on the Scotian Shelf to Support the Identification of Important Habitat},
@@ -92,6 +100,7 @@ Data, and Methods},
   howpublished = {Retrieved from https://open.canada.ca/data/en/dataset/d2d6057f-d7c4-45d9-9fd9-0a58370577e0}
 }
 
+
 @misc{OpenData_MAR_RV,
   author = {DFO},
   title = {Maritimes Research Vessel Surveys [Dataset]},
@@ -104,6 +113,13 @@ Data, and Methods},
   title = {The North Atlantic Right Whale Consortium Database: A Guide for Users and Contributors},
   institution = {North Atlantic Right Whale Consortium Reference Document Version 6. 2019-02. 144 pp.},
   year = {2019}
+}
+
+@techreport{Stanistreet2021,
+  author = {Stanistreet, J.E., Feyrer, L.J., and Moors-Murphy, H.B.},
+  title = {Distribution, movements, and habitat use of northern bottlenose whales ({\it Hyperoodon ampullatus}) on the Scotian Shelf},
+  institution = {DFO Can. Sci. Advis. Sec. Res. Doc. link forthcoming},
+  year = {in press}
 }
 
 @misc{whalemap,
