--- a/app/Rmd/intro_EN.Rmd
+++ b/app/Rmd/intro_EN.Rmd
@@ -26,24 +26,7 @@ a:hover {color: #006080;}
 
 ```{r setup and libraries, echo=FALSE, include=FALSE, cache=FALSE}
 knitr::opts_chunk$set(echo = FALSE, warning=FALSE, message=FALSE, fig.align="left")
-library(knitr) # reproducible reports from R Markdown 
-library(rgdal) # read geospatial data files into report
-library(maps) # uncouple lat/lon coordinates in sf objects
-library(lubridate) # extract YEAR from columns containing dates
-#library(sp)
-library(kableExtra) # build and manipulate tables
-library(tidyverse) # a set of packages required for general data manipulation, including ggplot2 for plotting and dplyr
-library(raster) # needed for manipulation of raster files
-library(sf) # manipulation of simple features and to determine overlap of studyArea and databases
-library(stringr) # manipulation of individual characters within strings in character vectors.
-library(data.table) # manipulation of dataframes
-library(gridExtra) # plot a grid of plots (priority cetacean habitat)
-library(stars) # transform features and assign or modify coordinate reference systems in objects
-library(ggspatial) #required for mapping
-#next lines are necessary for the generation of the water mark on plots
-#install.packages("remotes")
-#remotes::install_github("terminological/standard-print-output")
-library(standardPrintOutput) # required for watermarks on maps
+# check helpers.R for a list of packages
 ```
 ```{r load data, echo=FALSE, include=FALSE, cache=FALSE}
 minYear <- 2002
